@@ -1,3 +1,6 @@
+18 April 2016: Wouter
+	- Fix some malformed reponses to edns queries get fallback to nonedns.
+
 15 April 2016: Wouter
 	- cachedb module event handling design.
 
